--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2012Dial
 spring.jpa.hibernate.ddl-auto= none
 spring.integratedSecurity=true
 spring.jpa.open-in-view=true
+
+
+spring.main.allow-circular-references=true
+#cross
+url_cuadratura=http://localhost:3000
